Tests/project2/errors/exprassgn.flm
/* This tests for invalid expressions */

fun foo()
    begin
    a := 3 --2;
    b := b **3
    end


        
